Add jSpecify node.io.http.req package.